dark mode update, fixed bugs, today im sick so yea

--- a/assets/style.css
+++ b/assets/style.css
@@ -1320,3 +1320,8 @@ line-height: normal;
     background: #485367 !important;
     color: white !important;
 }
+
+.dark-elem2 {
+    background: #292E3D !important;
+    color: white !important;
+}
